--- a/src/application/MainScene.fxml
+++ b/src/application/MainScene.fxml
@@ -23,7 +23,7 @@
          </font>
       </Label>
       <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="150.0" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="420.0" />
-      <Button layoutX="166.0" layoutY="355.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="Login" />
+      <Button fx:id="okayButton" layoutX="58.0" layoutY="355.0" mnemonicParsing="false" onAction="#btnOkClicked" prefHeight="25.0" prefWidth="79.0" text="Login" />
       <Label layoutX="20.0" layoutY="200.0" text="From Date:" />
       <DatePicker fx:id="fromDatePicker" layoutX="20.0" layoutY="223.0" />
       <Label layoutX="222.0" layoutY="200.0" text="To Date:" />
@@ -31,5 +31,6 @@
       <ProgressBar fx:id="progressBar" layoutX="106.0" layoutY="280.0" prefWidth="200.0" progress="0.0" visible="false" />
       <ProgressIndicator fx:id="progressIndicator" layoutX="193.0" layoutY="306.0" prefHeight="40.0" prefWidth="79.0" progress="0.0" visible="false" />
       <Label fx:id="errorLabel" layoutX="152.0" layoutY="289.0" text="Error in retrieving data" textFill="RED" visible="false" />
+      <Button layoutX="284.0" layoutY="355.0" mnemonicParsing="false" onAction="#btnCancelClicked" prefHeight="25.0" prefWidth="79.0" text="Cancel" />
    </children>
 </AnchorPane>
